// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build-headers-program with caching headers 1`] = `
"## Created with gatsby-plugin-netlify

/*
  X-Frame-Options: DENY
  X-XSS-Protection: 1; mode=block
  X-Content-Type-Options: nosniff
  Referrer-Policy: same-origin
/component---node-modules-gatsby-plugin-offline-app-shell-js-78f9e4dea04737fa062d.js
  Cache-Control: public, max-age=31536000, immutable
/0-0180cd94ef2497ac7db8.js
  Cache-Control: public, max-age=31536000, immutable
/component---src-templates-blog-post-js-517987eae96e75cddbe7.js
  Cache-Control: public, max-age=31536000, immutable
/component---src-pages-404-js-53e6c51a5a7e73090f50.js
  Cache-Control: public, max-age=31536000, immutable
/component---src-pages-index-js-0bdd01c77ee09ef0224c.js
  Cache-Control: public, max-age=31536000, immutable
/webpack-runtime-acaa8994f1f704475e21.js
  Cache-Control: public, max-age=31536000, immutable
/styles.1025963f4f2ec7abbad4.css
  Cache-Control: public, max-age=31536000, immutable
/styles-565f081c8374bbda155f.js
  Cache-Control: public, max-age=31536000, immutable
/app-f33c13590352da20930f.js
  Cache-Control: public, max-age=31536000, immutable
/static/*
  Cache-Control: public, max-age=31536000, immutable
/sw.js
  Cache-Control: no-cache
/offline-plugin-app-shell-fallback/
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </component---node-modules-gatsby-plugin-offline-app-shell-js-78f9e4dea04737fa062d.js>; rel=preload; as=script
  Link: </page-data/app-data.json>; rel=preload; as=fetch; crossorigin
  Link: </page-data/offline-plugin-app-shell-fallback/page-data.json>; rel=preload; as=fetch; crossorigin
/hi-folks/
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </0-0180cd94ef2497ac7db8.js>; rel=preload; as=script
  Link: </component---src-templates-blog-post-js-517987eae96e75cddbe7.js>; rel=preload; as=script
  Link: </page-data/app-data.json>; rel=preload; as=fetch; crossorigin
  Link: </page-data/hi-folks/page-data.json>; rel=preload; as=fetch; crossorigin
/my-second-post/
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </0-0180cd94ef2497ac7db8.js>; rel=preload; as=script
  Link: </component---src-templates-blog-post-js-517987eae96e75cddbe7.js>; rel=preload; as=script
  Link: </page-data/app-data.json>; rel=preload; as=fetch; crossorigin
  Link: </page-data/my-second-post/page-data.json>; rel=preload; as=fetch; crossorigin
/hello-world/
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </0-0180cd94ef2497ac7db8.js>; rel=preload; as=script
  Link: </component---src-templates-blog-post-js-517987eae96e75cddbe7.js>; rel=preload; as=script
  Link: </page-data/app-data.json>; rel=preload; as=fetch; crossorigin
  Link: </page-data/hello-world/page-data.json>; rel=preload; as=fetch; crossorigin
/404/
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </0-0180cd94ef2497ac7db8.js>; rel=preload; as=script
  Link: </component---src-pages-404-js-53e6c51a5a7e73090f50.js>; rel=preload; as=script
  Link: </page-data/app-data.json>; rel=preload; as=fetch; crossorigin
  Link: </page-data/404/page-data.json>; rel=preload; as=fetch; crossorigin
/
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </0-0180cd94ef2497ac7db8.js>; rel=preload; as=script
  Link: </component---src-pages-index-js-0bdd01c77ee09ef0224c.js>; rel=preload; as=script
  Link: </page-data/app-data.json>; rel=preload; as=fetch; crossorigin
  Link: </page-data/index/page-data.json>; rel=preload; as=fetch; crossorigin
/404.html
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </0-0180cd94ef2497ac7db8.js>; rel=preload; as=script
  Link: </component---src-pages-404-js-53e6c51a5a7e73090f50.js>; rel=preload; as=script
  Link: </page-data/app-data.json>; rel=preload; as=fetch; crossorigin
  Link: </page-data/404.html/page-data.json>; rel=preload; as=fetch; crossorigin
"
`;

exports[`build-headers-program with manifest['pages-manifest'] 1`] = `
"## Created with gatsby-plugin-netlify

/*
  X-Frame-Options: DENY
  X-XSS-Protection: 1; mode=block
  X-Content-Type-Options: nosniff
  Referrer-Policy: same-origin
/component---node-modules-gatsby-plugin-offline-app-shell-js-78f9e4dea04737fa062d.js
  Cache-Control: public, max-age=31536000, immutable
/0-0180cd94ef2497ac7db8.js
  Cache-Control: public, max-age=31536000, immutable
/component---src-templates-blog-post-js-517987eae96e75cddbe7.js
  Cache-Control: public, max-age=31536000, immutable
/component---src-pages-404-js-53e6c51a5a7e73090f50.js
  Cache-Control: public, max-age=31536000, immutable
/component---src-pages-index-js-0bdd01c77ee09ef0224c.js
  Cache-Control: public, max-age=31536000, immutable
/pages-manifest-ab11f09e0ca7ecd3b43e.js
  Cache-Control: public, max-age=31536000, immutable
/webpack-runtime-acaa8994f1f704475e21.js
  Cache-Control: public, max-age=31536000, immutable
/styles.1025963f4f2ec7abbad4.css
  Cache-Control: public, max-age=31536000, immutable
/styles-565f081c8374bbda155f.js
  Cache-Control: public, max-age=31536000, immutable
/app-f33c13590352da20930f.js
  Cache-Control: public, max-age=31536000, immutable
/static/*
  Cache-Control: public, max-age=31536000, immutable
/sw.js
  Cache-Control: no-cache
/offline-plugin-app-shell-fallback/
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </component---node-modules-gatsby-plugin-offline-app-shell-js-78f9e4dea04737fa062d.js>; rel=preload; as=script
/hi-folks/
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </0-0180cd94ef2497ac7db8.js>; rel=preload; as=script
  Link: </component---src-templates-blog-post-js-517987eae96e75cddbe7.js>; rel=preload; as=script
/my-second-post/
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </0-0180cd94ef2497ac7db8.js>; rel=preload; as=script
  Link: </component---src-templates-blog-post-js-517987eae96e75cddbe7.js>; rel=preload; as=script
/hello-world/
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </0-0180cd94ef2497ac7db8.js>; rel=preload; as=script
  Link: </component---src-templates-blog-post-js-517987eae96e75cddbe7.js>; rel=preload; as=script
/404/
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </0-0180cd94ef2497ac7db8.js>; rel=preload; as=script
  Link: </component---src-pages-404-js-53e6c51a5a7e73090f50.js>; rel=preload; as=script
/
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </0-0180cd94ef2497ac7db8.js>; rel=preload; as=script
  Link: </component---src-pages-index-js-0bdd01c77ee09ef0224c.js>; rel=preload; as=script
/404.html
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </0-0180cd94ef2497ac7db8.js>; rel=preload; as=script
  Link: </component---src-pages-404-js-53e6c51a5a7e73090f50.js>; rel=preload; as=script
"
`;

exports[`build-headers-program with security headers 1`] = `
"## Created with gatsby-plugin-netlify

/*
  X-Frame-Options: ALLOW-FROM https://app.storyblok.com/
  X-XSS-Protection: 1; mode=block
  X-Content-Type-Options: nosniff
  Referrer-Policy: same-origin
  Content-Security-Policy: frame-ancestors 'self' https://*.storyblok.com/
/hello
  X-Frame-Options: SAMEORIGIN
/component---node-modules-gatsby-plugin-offline-app-shell-js-78f9e4dea04737fa062d.js
  Cache-Control: public, max-age=31536000, immutable
/0-0180cd94ef2497ac7db8.js
  Cache-Control: public, max-age=31536000, immutable
/component---src-templates-blog-post-js-517987eae96e75cddbe7.js
  Cache-Control: public, max-age=31536000, immutable
/component---src-pages-404-js-53e6c51a5a7e73090f50.js
  Cache-Control: public, max-age=31536000, immutable
/component---src-pages-index-js-0bdd01c77ee09ef0224c.js
  Cache-Control: public, max-age=31536000, immutable
/webpack-runtime-acaa8994f1f704475e21.js
  Cache-Control: public, max-age=31536000, immutable
/styles.1025963f4f2ec7abbad4.css
  Cache-Control: public, max-age=31536000, immutable
/styles-565f081c8374bbda155f.js
  Cache-Control: public, max-age=31536000, immutable
/app-f33c13590352da20930f.js
  Cache-Control: public, max-age=31536000, immutable
/static/*
  Cache-Control: public, max-age=31536000, immutable
/sw.js
  Cache-Control: no-cache
/offline-plugin-app-shell-fallback/
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </component---node-modules-gatsby-plugin-offline-app-shell-js-78f9e4dea04737fa062d.js>; rel=preload; as=script
  Link: </page-data/app-data.json>; rel=preload; as=fetch; crossorigin
  Link: </page-data/offline-plugin-app-shell-fallback/page-data.json>; rel=preload; as=fetch; crossorigin
/hi-folks/
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </0-0180cd94ef2497ac7db8.js>; rel=preload; as=script
  Link: </component---src-templates-blog-post-js-517987eae96e75cddbe7.js>; rel=preload; as=script
  Link: </page-data/app-data.json>; rel=preload; as=fetch; crossorigin
  Link: </page-data/hi-folks/page-data.json>; rel=preload; as=fetch; crossorigin
/my-second-post/
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </0-0180cd94ef2497ac7db8.js>; rel=preload; as=script
  Link: </component---src-templates-blog-post-js-517987eae96e75cddbe7.js>; rel=preload; as=script
  Link: </page-data/app-data.json>; rel=preload; as=fetch; crossorigin
  Link: </page-data/my-second-post/page-data.json>; rel=preload; as=fetch; crossorigin
/hello-world/
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </0-0180cd94ef2497ac7db8.js>; rel=preload; as=script
  Link: </component---src-templates-blog-post-js-517987eae96e75cddbe7.js>; rel=preload; as=script
  Link: </page-data/app-data.json>; rel=preload; as=fetch; crossorigin
  Link: </page-data/hello-world/page-data.json>; rel=preload; as=fetch; crossorigin
/404/
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </0-0180cd94ef2497ac7db8.js>; rel=preload; as=script
  Link: </component---src-pages-404-js-53e6c51a5a7e73090f50.js>; rel=preload; as=script
  Link: </page-data/app-data.json>; rel=preload; as=fetch; crossorigin
  Link: </page-data/404/page-data.json>; rel=preload; as=fetch; crossorigin
/
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </0-0180cd94ef2497ac7db8.js>; rel=preload; as=script
  Link: </component---src-pages-index-js-0bdd01c77ee09ef0224c.js>; rel=preload; as=script
  Link: </page-data/app-data.json>; rel=preload; as=fetch; crossorigin
  Link: </page-data/index/page-data.json>; rel=preload; as=fetch; crossorigin
/404.html
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </0-0180cd94ef2497ac7db8.js>; rel=preload; as=script
  Link: </component---src-pages-404-js-53e6c51a5a7e73090f50.js>; rel=preload; as=script
  Link: </page-data/app-data.json>; rel=preload; as=fetch; crossorigin
  Link: </page-data/404.html/page-data.json>; rel=preload; as=fetch; crossorigin
"
`;

exports[`build-headers-program without caching headers 1`] = `
"## Created with gatsby-plugin-netlify

/*
  X-Frame-Options: DENY
  X-XSS-Protection: 1; mode=block
  X-Content-Type-Options: nosniff
  Referrer-Policy: same-origin
/offline-plugin-app-shell-fallback/
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </component---node-modules-gatsby-plugin-offline-app-shell-js-78f9e4dea04737fa062d.js>; rel=preload; as=script
  Link: </page-data/app-data.json>; rel=preload; as=fetch; crossorigin
  Link: </page-data/offline-plugin-app-shell-fallback/page-data.json>; rel=preload; as=fetch; crossorigin
/hi-folks/
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </0-0180cd94ef2497ac7db8.js>; rel=preload; as=script
  Link: </component---src-templates-blog-post-js-517987eae96e75cddbe7.js>; rel=preload; as=script
  Link: </page-data/app-data.json>; rel=preload; as=fetch; crossorigin
  Link: </page-data/hi-folks/page-data.json>; rel=preload; as=fetch; crossorigin
/my-second-post/
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </0-0180cd94ef2497ac7db8.js>; rel=preload; as=script
  Link: </component---src-templates-blog-post-js-517987eae96e75cddbe7.js>; rel=preload; as=script
  Link: </page-data/app-data.json>; rel=preload; as=fetch; crossorigin
  Link: </page-data/my-second-post/page-data.json>; rel=preload; as=fetch; crossorigin
/hello-world/
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </0-0180cd94ef2497ac7db8.js>; rel=preload; as=script
  Link: </component---src-templates-blog-post-js-517987eae96e75cddbe7.js>; rel=preload; as=script
  Link: </page-data/app-data.json>; rel=preload; as=fetch; crossorigin
  Link: </page-data/hello-world/page-data.json>; rel=preload; as=fetch; crossorigin
/404/
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </0-0180cd94ef2497ac7db8.js>; rel=preload; as=script
  Link: </component---src-pages-404-js-53e6c51a5a7e73090f50.js>; rel=preload; as=script
  Link: </page-data/app-data.json>; rel=preload; as=fetch; crossorigin
  Link: </page-data/404/page-data.json>; rel=preload; as=fetch; crossorigin
/
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </0-0180cd94ef2497ac7db8.js>; rel=preload; as=script
  Link: </component---src-pages-index-js-0bdd01c77ee09ef0224c.js>; rel=preload; as=script
  Link: </page-data/app-data.json>; rel=preload; as=fetch; crossorigin
  Link: </page-data/index/page-data.json>; rel=preload; as=fetch; crossorigin
/404.html
  Link: </webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script
  Link: </styles-565f081c8374bbda155f.js>; rel=preload; as=script
  Link: </app-f33c13590352da20930f.js>; rel=preload; as=script
  Link: </0-0180cd94ef2497ac7db8.js>; rel=preload; as=script
  Link: </component---src-pages-404-js-53e6c51a5a7e73090f50.js>; rel=preload; as=script
  Link: </page-data/app-data.json>; rel=preload; as=fetch; crossorigin
  Link: </page-data/404.html/page-data.json>; rel=preload; as=fetch; crossorigin
"
`;
